[package]
name = "kelder_scherm_renderer"
version = "0.1.0"
edition = "2021"
description = "Vertex based renderer for displaying fancy things on kelder_scherm"
readme = "README.md"
repository = "https://github.com/Tibo-Ulens/kelder_scherm_renderer"
license = "MIT"
publish = false

[dependencies]
futures-util = "0.3.21"
reqwest = "0.11.9"
thiserror = "1.0.30"
tokio = {version = "1.17.0", features = ["full"]}
tokio-tungstenite = "0.17.1"
